Removing amd, in progress. Document page in progress.

--- a/central-js2/client/html/documents/index.html
+++ b/central-js2/client/html/documents/index.html
@@ -3,11 +3,11 @@
         <div class="col-md-12">
             <ul class="nav nav-tabs">
                 <li ui-sref-active="active"
-                    role="presentation"><a ui-sref="documents.bankid">Мої документи</a></li>
+                    role="presentation"><a ui-sref="index.documents.bankid">Мої документи</a></li>
                 <li ui-sref-active="active"
-                    role="presentation"><a ui-sref="documents.search">Пошук документу за кодом</a></li>
+                    role="presentation"><a ui-sref="index.documents.search">Пошук документу за кодом</a></li>
                 <li ui-sref-active="active"
-                    role="presentation"><a ui-sref="documents.notary">Нотаріусам</a></li>
+                    role="presentation"><a ui-sref="index.documents.notary">Нотаріусам</a></li>
             </ul>
         </div>
         <div class="col-md-12">
