--- a/central-js2/client/index.html
+++ b/central-js2/client/index.html
@@ -82,9 +82,7 @@
 <script src="app/404/script.js"></script>
 <script src="app/about/script.js"></script>
 <script src="app/activiti/services/activiti.js"></script>
-<script src="app/bankid/factories/documents.js"></script>
-<script src="app/bankid/factories/passport.js"></script>
-<script src="app/bankid/services/bankid.js"></script>
+<script src="app/common/services/bankid.service.js"></script>
 <script src="app/components/dropdown/factories/dropdown.js"></script>
 <script src="app/components/form/directives/file.js"></script>
 <script src="app/components/form/directives/file2.js"></script>
@@ -96,8 +94,13 @@
 <script src="app/components/select/directives/optionsClass.js"></script>
 <script src="app/components/typeahead/directives/typeaheadEmpty.js"></script>
 <script src="app/components/typeahead/factories/typeahead.js"></script>
-<script src="app/documents/controllers/states.js"></script>
+<script src="app/documents/controllers/documents.controller.js"></script>
+<script src="app/documents/controllers/documentsbankid.controller.js"></script>
+<script src="app/documents/controllers/documentscontent.controller.js"></script>
+<script src="app/documents/controllers/modal.controller.js"></script>
 <script src="app/documents/document.js"></script>
+<script src="app/documents/factories/bankiddocuments.factory.js"></script>
+<script src="app/documents/factories/bankiddocumentspassport.factory.js"></script>
 <script src="app/index/index.controller.js"></script>
 <script src="app/index/subcategory.controller.js"></script>
 <script src="app/journal/controllers/journal.controller.js"></script>
