--- a/central-js2/client/html/bootstrap/typeahead/typeahead-match-city.html
+++ b/central-js2/client/html/bootstrap/typeahead/typeahead-match-city.html
@@ -4,4 +4,6 @@
 	<a tabindex="-1" class="color-red" bind-html-unsafe="match.label | typeaheadHighlight:query" ng-switch-when="red"></a>
 </div>
 -->
-<a tabindex="-1" ng-class="{'color-green': (match.model.color == 'green')}" bind-html-unsafe="match.label | typeaheadHighlight:query"></a>
+<a tabindex="-1"
+   ng-class="{'color-green': (match.model.color == 'green')}"
+   bind-html-unsafe="match.label | typeaheadHighlight:query"></a>
