--- a/central-js2/client/html/catalog/services.html
+++ b/central-js2/client/html/catalog/services.html
@@ -1,83 +1,162 @@
 <div class="container">
     <div class="row">
-        <div style="/*width: 600px;margin-left: 0;alignment-adjust: central;*/" class="col-md-7 col-md-offset-3">
-           <div class="big-inner-addon">
-              <span class="glyphicon glyphicon-search al-left" aria-hidden="true"></span>
-              <input ng-model="sSearch" ng-model-options="{ updateOn: 'default', debounce: {'default': 500} }" ng-change="search()"type="text" class="form-control input-lg" placeholder="Пошук послуги">
-              <a href="#" ng-click="onExtSearchClick()"><span class="glyphicon glyphicon-triangle-bottom al-right" aria-hidden="true"></span></a>
-               <div class="panel panel-default" ng-show="bShowExtSearch">
-                   <div class="row clearfix">
-                       <div class="col-md-12 column">
-                           <div class="form-group">
-                               <select class="form-control" id="oplist" ng-model="operator" ng-change="filterByExtSearch()">
-                                   <option value="-1">Оберiть установу</option>
-                                   <option ng-repeat="operator in operators">{{operator.sSubjectOperatorName}}</option>
-                               </select>
-                           </div>
+        <div style="/*width: 600px;margin-left: 0;alignment-adjust: central;*/"
+             class="col-md-7 col-md-offset-3">
+            <div class="big-inner-addon">
+                <span class="glyphicon glyphicon-search al-left"
+                      aria-hidden="true"></span>
+                <input ng-model="sSearch"
+                       ng-model-options="{ updateOn: 'default', debounce: {'default': 500} }"
+                       ng-change="search()"
+                       type="text"
+                       class="form-control input-lg"
+                       placeholder="Пошук послуги">
+                <a href="#"
+                   ng-click="onExtSearchClick()"><span class="glyphicon glyphicon-triangle-bottom al-right"
+                                                       aria-hidden="true"></span></a>
 
-                           <div class="form-group">
-                               <select ng-model="selectedStatus" class="form-control" ng-change="filterByExtSearch()">
-                                   <option value="-1">Всі послуги</option>
-                                   <option value="2">Доступні онлайн</option>
-                                   <option value="1">Послуги, що запустяться незабаром</option>
-                               </select>
-                           </div>
-                       </div>
-                   </div>
-               </div>
-           </div>
+                <div class="panel panel-default"
+                     ng-show="bShowExtSearch">
+                    <div class="row clearfix">
+                        <div class="col-md-12 column">
+                            <div class="form-group">
+                                <select class="form-control"
+                                        id="oplist"
+                                        ng-model="operator"
+                                        ng-change="filterByExtSearch()">
+                                    <option value="-1">Оберiть установу</option>
+                                    <option ng-repeat="operator in operators">{{operator.sSubjectOperatorName}}</option>
+                                </select>
+                            </div>
+
+                            <div class="form-group">
+                                <select ng-model="selectedStatus"
+                                        class="form-control"
+                                        ng-change="filterByExtSearch()">
+                                    <option value="-1">Всі послуги</option>
+                                    <option value="2">Доступні онлайн</option>
+                                    <option value="1">Послуги, що запустяться незабаром</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="index-services-count">
-                <a href="#" ng-click="filterByStatus(2)">
-                    <span class="index-services-count-item" ng-click="filterByState(2)">
+                <a href="#"
+                   ng-click="filterByStatus(2)">
+                    <span class="index-services-count-item"
+                          ng-click="filterByState(2)">
                         <nobr>
-                        <span class="icon-e-service-on"></span>{{catalogCounts[2]}} &mdash; послуги доступно онлайн
+                            <span class="icon-e-service-on"></span>{{catalogCounts[2]}} &mdash; послуги доступно онлайн
                         </nobr>
                     </span>
                 </a>
-                <a href="#" ng-click="filterByStatus(1)">
-                    <span class="index-services-count-item" >
-                        <nobr>
-                        <span class="icon-e-service-test"></span>{{catalogCounts[1]}} &mdash; дуже скоро
-                        </nobr>
-                    </span>
-                </a>
-                <a href="#" ng-click="filterByStatus(0)">
+                <a href="#"
+                   ng-click="filterByStatus(1)">
                     <span class="index-services-count-item">
                         <nobr>
-                        <span class="icon-e-service-off"></span>{{catalogCounts[0]}} &mdash; в роботі
+                            <span class="icon-e-service-test"></span>{{catalogCounts[1]}} &mdash; дуже скоро
+                        </nobr>
+                    </span>
+                </a>
+                <a href="#"
+                   ng-click="filterByStatus(0)">
+                    <span class="index-services-count-item">
+                        <nobr>
+                            <span class="icon-e-service-off"></span>{{catalogCounts[0]}} &mdash; в роботі
                         </nobr>
                     </span>
                 </a>
             </div>
         </div>
     </div>
-        <a class="ctrls-admin ctrls-cat add0-cat" href="" ng-if="bAdmin"><span class="glyphicon glyphicon-plus"></span> Додати категорію</a>
-	<div class="row" ng-repeat="category in catalog">
-            <hr ng-if="category.nID>1">
-            <h1 style="margin-bottom:0px;margin-top:20px;">{{category.sName}}  <a class="ctrls-admin ctrls-cat" href="" title="Редагувати категорію" ng-if="bAdmin"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-cat" href="" title="Видалити категорію" ng-if="bAdmin"><span class="glyphicon glyphicon-remove"></span></a></h1>
-            <p style="margin-bottom:-10px;margin-top:20px;margin-left:17px;"><a class="ctrls-admin ctrls-subcat add0-subcat" href="" ng-if="bAdmin"><span class="glyphicon glyphicon-plus"></span> Додати підкатегорію</a></p>
-			<div class="col-md-4" ng-repeat-start="subcategory in category.aSubcategory">
-				<h3>{{subcategory.sName}} <a class="ctrls-admin ctrls-subcat" href="" title="Редагувати підкатегорію" ng-if="bAdmin"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-subcat" href="" title="Видалити підкатегорію" ng-if="bAdmin"><span class="glyphicon glyphicon-remove"></span></a></h3>
-				<a class="ctrls-admin ctrls-srvc add0-srvc" href="" ng-if="bAdmin"><span class="glyphicon glyphicon-plus"></span> Додати послугу</a>
-                                <ul class="list-unstyled">
-					<li ng-repeat="service in subcategory.aService | orderBy: '-nSub' | limitTo: limit as services">
-						<!--a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general">({{service.nSub}}) {{service.sName}}</a-->
-                                                <!--a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service"></i>({{service.nSub}}) {{service.sName}}</a-->
-                                                <!--p ng-if="service.nSub>0"><a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-on" title="Ця послуга доступна в електронній формі для одного, кількох або всіх регіонів"></i>{{service.sName}}</a> <a class="ctrls-admin ctrls-srvc" href="" title="Редагувати послугу" ng-if="bAdmin"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-srvc" href="" title="Видалити послугу" ng-if="bAdmin"><span class="glyphicon glyphicon-remove"></span></a></p>
-                                                <p ng-if="service.nSub==0"><a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-off" title="Ця послуга поки не доступна онлайн. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна."></i>{{service.sName}}</a> <a class="ctrls-admin ctrls-srvc" href="" title="Редагувати послугу" ng-if="bAdmin"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-srvc" href="" title="Видалити послугу" ng-if="bAdmin"><span class="glyphicon glyphicon-remove"></span></a></p-->
-                                                <p ng-if="service.nStatus==2"><a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-on" title="Ця послуга доступна в електронній формі для одного, кількох або всіх регіонів"></i>{{service.sName}}</a> <a class="ctrls-admin ctrls-srvc" href="" title="Редагувати послугу" ng-if="bAdmin"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-srvc" href="" title="Видалити послугу" ng-if="bAdmin"><span class="glyphicon glyphicon-remove"></span></a></p>
-                                                <p ng-if="service.nStatus==1"><a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-test" title="Ця послуга буде доступна онлайн дуже скоро. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна."></i>{{service.sName}}</a> <a class="ctrls-admin ctrls-srvc" href="" title="Редагувати послугу" ng-if="bAdmin"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-srvc" href="" title="Видалити послугу" ng-if="bAdmin"><span class="glyphicon glyphicon-remove"></span></a></p>
-                                                <p ng-if="service.nStatus==0"><a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-off" title="Ця послуга поки не доступна онлайн. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна."></i>{{service.sName}}</a> <a class="ctrls-admin ctrls-srvc" href="" title="Редагувати послугу" ng-if="bAdmin"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-srvc" href="" title="Видалити послугу" ng-if="bAdmin"><span class="glyphicon glyphicon-remove"></span></a></p>
-					</li>
-				</ul>                        
-				<!--<p><a class="btn btn-default" href="#" role="button"-->
-					  <!--ng-hide="subcategory.aService.length <= 10 || services.length === subcategory.aService.length"-->
-					  <!--ng-click="limit = subcategory.aService.length">Всі послуги <span class="badge badge-info">{{ subcategory.aService.length }}</span></a></p>-->
-				<p><a class="btn btn-default" href="#" role="button"
-                                            ui-sref="subcategory({'catID': category.nID, 'scatID': subcategory.nID })"
-                                            ng-hide="subcategory.aService.length <= limit"
-                                            ng-href="/subcategory/{{category.nID}}/{{subcategory.nID}}">Всі послуги <span class="badge badge-info">{{ subcategory.aService.length }}</span></a></p>
-			</div>
-			<div class="col-md-12" ng-if="($index+1)%3 == 0" ng-repeat-end></div>
-	</div>
+    <a class="ctrls-admin ctrls-cat add0-cat"
+       href=""
+       ng-if="bAdmin"><span class="glyphicon glyphicon-plus"></span> Додати категорію</a>
+
+    <div class="row"
+         ng-repeat="category in catalog">
+        <hr ng-if="category.nID>1">
+        <h1 style="margin-bottom:0px;margin-top:20px;">{{category.sName}} <a class="ctrls-admin ctrls-cat"
+                                                                             href=""
+                                                                             title="Редагувати категорію"
+                                                                             ng-if="bAdmin"><span class="glyphicon glyphicon-pencil"></span></a>
+            <a class="ctrls-admin ctrls-cat"
+               href=""
+               title="Видалити категорію"
+               ng-if="bAdmin"><span class="glyphicon glyphicon-remove"></span></a></h1>
+
+        <p style="margin-bottom:-10px;margin-top:20px;margin-left:17px;"><a class="ctrls-admin ctrls-subcat add0-subcat"
+                                                                            href=""
+                                                                            ng-if="bAdmin"><span class="glyphicon glyphicon-plus"></span>
+            Додати підкатегорію</a></p>
+
+        <div class="col-md-4"
+             ng-repeat-start="subcategory in category.aSubcategory">
+            <h3>{{subcategory.sName}} <a class="ctrls-admin ctrls-subcat"
+                                         href=""
+                                         title="Редагувати підкатегорію"
+                                         ng-if="bAdmin"><span class="glyphicon glyphicon-pencil"></span></a>
+                <a class="ctrls-admin ctrls-subcat"
+                   href=""
+                   title="Видалити підкатегорію"
+                   ng-if="bAdmin"><span class="glyphicon glyphicon-remove"></span></a></h3>
+            <a class="ctrls-admin ctrls-srvc add0-srvc"
+               href=""
+               ng-if="bAdmin"><span class="glyphicon glyphicon-plus"></span> Додати послугу</a>
+            <ul class="list-unstyled">
+                <li ng-repeat="service in subcategory.aService | orderBy: '-nSub' | limitTo: limit as services">
+                    <p ng-if="service.nStatus==2"><a ui-sref="index.service.general({'id': service.nID })"
+                                                     ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-on"
+                                                                                                   title="Ця послуга доступна в електронній формі для одного, кількох або всіх регіонів"></i>{{service.sName}}</a>
+                        <a class="ctrls-admin ctrls-srvc"
+                           href=""
+                           title="Редагувати послугу"
+                           ng-if="bAdmin"><span class="glyphicon glyphicon-pencil"></span></a>
+                        <a class="ctrls-admin ctrls-srvc"
+                           href=""
+                           title="Видалити послугу"
+                           ng-if="bAdmin"><span class="glyphicon glyphicon-remove"></span></a></p>
+
+                    <p ng-if="service.nStatus==1"><a ui-sref="index.service.general({'id': service.nID })"
+                                                     ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-test"
+                                                                                                   title="Ця послуга буде доступна онлайн дуже скоро. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна."></i>{{service.sName}}</a>
+                        <a class="ctrls-admin ctrls-srvc"
+                           href=""
+                           title="Редагувати послугу"
+                           ng-if="bAdmin"><span class="glyphicon glyphicon-pencil"></span></a>
+                        <a class="ctrls-admin ctrls-srvc"
+                           href=""
+                           title="Видалити послугу"
+                           ng-if="bAdmin"><span class="glyphicon glyphicon-remove"></span></a></p>
+
+                    <p ng-if="service.nStatus==0"><a ui-sref="index.service.general({'id': service.nID })"
+                                                     ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-off"
+                                                                                                   title="Ця послуга поки не доступна онлайн. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна."></i>{{service.sName}}</a>
+                        <a class="ctrls-admin ctrls-srvc"
+                           href=""
+                           title="Редагувати послугу"
+                           ng-if="bAdmin"><span class="glyphicon glyphicon-pencil"></span></a>
+                        <a class="ctrls-admin ctrls-srvc"
+                           href=""
+                           title="Видалити послугу"
+                           ng-if="bAdmin"><span class="glyphicon glyphicon-remove"></span></a></p>
+                </li>
+            </ul>
+            <!--<p><a class="btn btn-default" href="#" role="button"-->
+            <!--ng-hide="subcategory.aService.length <= 10 || services.length === subcategory.aService.length"-->
+            <!--ng-click="limit = subcategory.aService.length">Всі послуги <span class="badge badge-info">{{ subcategory.aService.length }}</span></a></p>-->
+            <p><a class="btn btn-default"
+                  href="#"
+                  role="button"
+                  ui-sref="index.subcategory({'catID': category.nID, 'scatID': subcategory.nID })"
+                  ng-hide="subcategory.aService.length <= limit"
+                  ng-href="/subcategory/{{category.nID}}/{{subcategory.nID}}">Всі послуги
+                <span class="badge badge-info">{{ subcategory.aService.length }}</span></a></p>
+        </div>
+        <div class="col-md-12"
+             ng-if="($index+1)%3 == 0"
+             ng-repeat-end></div>
+    </div>
 </div>
