--- a/central-js2/client/html/catalog/subcategory.html
+++ b/central-js2/client/html/catalog/subcategory.html
@@ -3,15 +3,27 @@
         <div class="row">
             <h1 style="margin-bottom:-10px;margin-top:20px;">{{category.sName}}: {{subcategory.sName}}</h1>
         </div>
-        <div class="col-md-4" ng-repeat-start="service in subcategory.aService | orderBy: '-nSub'">
+        <div class="col-md-4"
+             ng-repeat-start="service in subcategory.aService | orderBy: '-nSub'">
             <ul class="list-unstyled">
                 <li>
-                    <a ng-if="service.nStatus==2" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-on" title="Ця послуга доступна в електронній формі для одного, кількох або всіх регіонів"></i>{{service.sName}}</a>
-                    <a ng-if="service.nStatus==1" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-test" title="Ця послуга буде доступна онлайн дуже скоро. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна."></i>{{service.sName}}</a>
-                    <a ng-if="service.nStatus==0" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-off" title="Ця послуга поки не доступна онлайн. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна."></i>{{service.sName}}</a>
+                    <a ng-if="service.nStatus==2"
+                       ui-sref="index.service.general({'id': service.nID })"
+                       ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-on"
+                                                                     title="Ця послуга доступна в електронній формі для одного, кількох або всіх регіонів"></i>{{service.sName}}</a>
+                    <a ng-if="service.nStatus==1"
+                       ui-sref="index.service.general({'id': service.nID })"
+                       ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-test"
+                                                                     title="Ця послуга буде доступна онлайн дуже скоро. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна."></i>{{service.sName}}</a>
+                    <a ng-if="service.nStatus==0"
+                       ui-sref="index.service.general({'id': service.nID })"
+                       ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-off"
+                                                                     title="Ця послуга поки не доступна онлайн. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна."></i>{{service.sName}}</a>
                 </li>
             </ul>
         </div>
-        <div class="col-md-12" ng-if="($index+1)%3 == 0" ng-repeat-end></div>
+        <div class="col-md-12"
+             ng-if="($index+1)%3 == 0"
+             ng-repeat-end></div>
     </div>
 </div>
