--- a/central-js2/client/html/documents/search/index.html
+++ b/central-js2/client/html/documents/search/index.html
@@ -1,13 +1,20 @@
 <!--div ui-view="content"></div-->
 <div class="list-group">
-	<div class="list-group-item">
-		<div class="row no-margin-bottom">
-			<div class="col-md-10">
-                            <p>Тут Ви зможете шукати електронні образи документів як державних організацій (наприклад, довідки) так і приватних (наприклад, довідки банків).</p>
-                            <a href="https://docs.google.com/presentation/d/17SPm-nD1awYllMNiuv3gQnckOC0VegHj7-SbLtjTOZs/edit#slide=id.p">Докладніше про розділ Документи на порталі iGov</a>
-                            <br>
-                            (розділ у процесі розробки)
-			</div>
-		</div>
-	</div>
+    <div class="list-group-item">
+        <div class="row no-margin-bottom">
+            <div class="col-md-10">
+                <p>Тут Ви зможете шукати електронні образи документів як державних організацій (наприклад, довідки) так
+                   і приватних (наприклад, довідки банків).</p>
+                <a href="https://docs.google.com/presentation/d/17SPm-nD1awYllMNiuv3gQnckOC0VegHj7-SbLtjTOZs/edit#slide=id.p">Докладніше
+                                                                                                                              про
+                                                                                                                              розділ
+                                                                                                                              Документи
+                                                                                                                              на
+                                                                                                                              порталі
+                                                                                                                              iGov</a>
+                <br>
+                (розділ у процесі розробки)
+            </div>
+        </div>
+    </div>
 </div>
