--- a/central-js2/client/html/journal/content.html
+++ b/central-js2/client/html/journal/content.html
@@ -1,30 +1,37 @@
 <!--div class="container"-->
-    <div class="row">
-        <div class="col-md-4">
-            <h1>Мій журнал</h1>
-                                <b style="color: red;">Сервіс в процесі реалізації!</b>
-        </div>
-        <div class="col-md-4 col-md-offset-4 text-right">
-            <div class="ord-inner-addon">
-                <span class="glyphicon glyphicon-search al-left" aria-hidden="true"></span>
-                <input type="text" class="form-control" placeholder="Пошук">
-                <a href="#"><span class="glyphicon glyphicon-triangle-bottom al-right" aria-hidden="true"></span></a>
-            </div>
+<div class="row">
+    <div class="col-md-4">
+        <h1>Мій журнал</h1>
+        <b style="color: red;">Сервіс в процесі реалізації!</b>
+    </div>
+    <div class="col-md-4 col-md-offset-4 text-right">
+        <div class="ord-inner-addon">
+            <span class="glyphicon glyphicon-search al-left"
+                  aria-hidden="true"></span>
+            <input type="text"
+                   class="form-control"
+                   placeholder="Пошук">
+            <a href="#"><span class="glyphicon glyphicon-triangle-bottom al-right"
+                              aria-hidden="true"></span></a>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <table class="table" ng-init="limit = 7">
-                <tr data-ng-repeat="event in journal | limitTo: limit as results">
-                    <td>{{ event.sDate | date: 'dd MMMM yyyy HH:mm'}}</td>
-                    <td>{{ event.sEventName }}</td>
-                </tr>
-            </table>
-        </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <table class="table"
+               ng-init="limit = 7">
+            <tr data-ng-repeat="event in journal | limitTo: limit as results">
+                <td>{{ event.sDate | date: 'dd MMMM yyyy HH:mm'}}</td>
+                <td>{{ event.sEventName }}</td>
+            </tr>
+        </table>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <a href="#" ng-hide="results.length === items.length" ng-click="limit = limit +10">Показати ще</a>
-        </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <a href="#"
+           ng-hide="results.length === items.length"
+           ng-click="limit = limit +10">Показати ще</a>
     </div>
+</div>
 <!--/div-->
