--- a/central-js2/client/html/service/city/link/index.html
+++ b/central-js2/client/html/service/city/link/index.html
@@ -1,7 +1,12 @@
 <span>Крок 2.</span>
 <div class="service-description">
-	<p class="service-description-text" ng-bind-html="serviceData.sNote" ng-if="serviceData.sNote"></p>
-	<div class="service-button-go">
-		<a ng-href="{{serviceData.sURL}}" class="btn btn-primary" target="_blank">Перейти</a>
-	</div>
+    <p class="service-description-text"
+       ng-bind-html="serviceData.sNote"
+       ng-if="serviceData.sNote"></p>
+
+    <div class="service-button-go">
+        <a ng-href="{{serviceData.sURL}}"
+           class="btn btn-primary"
+           target="_blank">Перейти</a>
+    </div>
 </div>
