--- a/central-js2/client/html/service/index.html
+++ b/central-js2/client/html/service/index.html
@@ -4,27 +4,35 @@
     <div class="row">
         <div class="col-md-12">
             <ul class="nav nav-tabs">
-                <li ui-sref-active="active" role="presentation">
-                    <a ui-sref="service.general({id: service.nID})">Послуга</a>
+                <li ui-sref-active="active"
+                    role="presentation">
+                    <a ui-sref="index.service.general({id: service.nID})">Послуга</a>
                 </li>
-                <li ui-sref-active="active" ng-if="service.sInfo.trim() || bAdmin" role="presentation">
-                    <a ui-sref="service.instruction({id: service.nID})">Як працює</a>
+                <li ui-sref-active="active"
+                    ng-if="service.sInfo.trim() || bAdmin"
+                    role="presentation">
+                    <a ui-sref="index.service.instruction({id: service.nID})">Як працює</a>
                 </li>
-                <li ui-sref-active="active" ng-if="service.sLaw.trim() || bAdmin" role="presentation">
-                    <a ui-sref="service.legislation({id: service.nID})">Законодавство</a>
+                <li ui-sref-active="active"
+                    ng-if="service.sLaw.trim() || bAdmin"
+                    role="presentation">
+                    <a ui-sref="index.service.legislation({id: service.nID})">Законодавство</a>
                 </li>
-                <li ui-sref-active="active" ng-if="service.sFAQ.trim() || bAdmin"role="presentation">
-                    <a ui-sref="service.questions({id: service.nID})">Поширенні питання</a>
+                <li ui-sref-active="active"
+                    ng-if="service.sFAQ.trim() || bAdmin"
+                    role="presentation">
+                    <a ui-sref="index.service.questions({id: service.nID})">Поширенні питання</a>
                 </li>
-                <li ui-sref-active="active" style="display: none;" role="presentation">
-                    <a ui-sref="service.discussion({id: service.nID})">Обговорення</a>
+                <li ui-sref-active="active"
+                    style="display: none;"
+                    role="presentation">
+                    <a ui-sref="index.service.discussion({id: service.nID})">Обговорення</a>
                 </li>
             </ul>
         </div>
     </div>
     <div ui-view="">
         <div class="text-center">
-            <!--h2>Зачейкате, будь ласка</h2-->
             <img class="text-center"
                  src="assets/images/loading.gif"
                  alt="Loading"/>
