--- a/central-js2/client/html/service/legislation.html
+++ b/central-js2/client/html/service/legislation.html
@@ -1,17 +1,26 @@
 <div class="list-group">
-	<div class="list-group-item">
-		<div class="row no-margin-bottom">
-			<div style="margin:0px 10px 0px 10px" class="col-md-50" ng-if="service.sLaw.trim()!=''">
-                            {{service.sLaw}}
-			</div>
-			<div class="col-md-10" ng-if="service.sLaw.trim()==''">
-                            Розділ у процесі наповнення
-			</div>
-		</div>
-	</div>
-        <div class="ctrls-line">
-			<a class="ctrls-admin ctrls-srvc-edit" href="" ng-if="bAdmin"><span class="glyphicon glyphicon-pencil"></span> Редагувати</a>
-			<a class="ctrls-admin ctrls-srvc-save" href="" ng-if="bAdmin"><span class="glyphicon glyphicon-ok"></span> Зберегти</a>
-			<a class="ctrls-admin ctrls-srvc-cancel" href="" ng-if="bAdmin"><span class="glyphicon glyphicon-minus"></span> Скасувати</a>
+    <div class="list-group-item">
+        <div class="row no-margin-bottom">
+            <div style="margin:0px 10px 0px 10px"
+                 class="col-md-50"
+                 ng-if="service.sLaw.trim()!=''">
+                {{service.sLaw}}
+            </div>
+            <div class="col-md-10"
+                 ng-if="service.sLaw.trim()==''">
+                Розділ у процесі наповнення
+            </div>
         </div>
+    </div>
+    <div class="ctrls-line">
+        <a class="ctrls-admin ctrls-srvc-edit"
+           href=""
+           ng-if="bAdmin"><span class="glyphicon glyphicon-pencil"></span> Редагувати</a>
+        <a class="ctrls-admin ctrls-srvc-save"
+           href=""
+           ng-if="bAdmin"><span class="glyphicon glyphicon-ok"></span> Зберегти</a>
+        <a class="ctrls-admin ctrls-srvc-cancel"
+           href=""
+           ng-if="bAdmin"><span class="glyphicon glyphicon-minus"></span> Скасувати</a>
+    </div>
 </div>
