--- a/central-js2/client/index.html
+++ b/central-js2/client/index.html
@@ -79,8 +79,8 @@
 <!-- build:js({.tmp,client}) app/app.js -->
 <script src="app/app.js"></script>
 <!-- injector:js -->
-<script src="app/404/script.js"></script>
-<script src="app/about/script.js"></script>
+<script src="app/404/404.js"></script>
+<script src="app/about/about.js"></script>
 <script src="app/activiti/services/activiti.js"></script>
 <script src="app/common/services/bankid.service.js"></script>
 <script src="app/components/dropdown/factories/dropdown.js"></script>
