Removing amd, in progress. Journal page in ready.

--- a/central-js2/client/app/header/header.html
+++ b/central-js2/client/app/header/header.html
@@ -43,7 +43,7 @@
                     class="menu-item"
                     ui-sref-active="selected">
                     <a style="margin-top: 5px;"
-                       ui-sref="index.journal">
+                       ui-sref="index.journal.bankid">
                         <h4>Мій журнал</h4>
                     </a>
                 </li>
