Removing amd, in progress. Fixing images.

--- a/central-js2/client/index.html
+++ b/central-js2/client/index.html
@@ -107,15 +107,15 @@
 <script src="app/journal/controllers/journalbankid.controller.js"></script>
 <script src="app/journal/controllers/journalcontent.controller.js"></script>
 <script src="app/journal/journal.js"></script>
-<script src="app/places/factories/localityList.js"></script>
-<script src="app/places/factories/regionList.js"></script>
-<script src="app/places/services/places.js"></script>
+<script src="app/common/factories/localitylist.factory.js"></script>
+<script src="app/common/factories/regionlist.factory.js"></script>
+<script src="app/common/services/place.service.js"></script>
 <script src="app/service/built-in/controllers/built-in.js"></script>
 <script src="app/service/catalog.js"></script>
-<script src="app/service/city/built-in/script.js"></script>
+<script src="app/service/city/built-in/builtin.js"></script>
 <script src="app/service/city/controllers/states.js"></script>
 <script src="app/service/city/link/script.js"></script>
-<script src="app/service/city/script.js"></script>
+<script src="app/service/city/city.js"></script>
 <script src="app/service/controllers/states.js"></script>
 <script src="app/service/country/built-in/script.js"></script>
 <script src="app/service/country/controllers/states.js"></script>
