adding eds server implementation and client usage example

--- a/central-js/client/src/html/documents/bankid/index.html
+++ b/central-js/client/src/html/documents/bankid/index.html
@@ -7,7 +7,7 @@
             <span class="btn-text">BankID</span>
         </a>
         <button style="display: none;" class="btn"><i class="icon-mobil-id"></i></button>
-        <button onclick="alert('Працюватиме незабаром');" class="btn btn-success i-btn-badge">
+        <button ng-click="loginWithEds()" class="btn btn-success i-btn-badge">
             <i class="icon-badge"></i>
             <span class="btn-text"><div>Сертифікат електронно-</div><div>цифрового підпису</div></span>
         </button>
