--- a/central-js/client/src/html/service/auth/serviceAuthBlock.html
+++ b/central-js/client/src/html/service/auth/serviceAuthBlock.html
@@ -7,7 +7,7 @@
         <span class="btn-text">BankID</span>
     </a>
     <button style="display: none;" class="btn"><i class="icon-mobil-id"></i></button>
-    <button onclick="alert('Працюватиме незабаром');" class="btn btn-success i-btn-badge"
+    <button ng-click="loginWithEds()" class="btn btn-success i-btn-badge"
             ng-if="!authMethods || authMethods.indexOf('EDS') > -1">
         <i class="icon-badge"></i>
         <span class="btn-text"><div>Сертифікат електронно-</div><div>цифрового підпису</div></span>
