--- a/central-js/client/src/html/service/city/content.html
+++ b/central-js/client/src/html/service/city/content.html
@@ -22,11 +22,11 @@
                                    typeahead-on-select="onSelectRegionList($item)"
                                    typeahead-template-url="html/bootstrap/typeahead/typeahead-match-region.html"
                                    typeahead-empty
-                                   ng-disabled="data.region"/>
+                                   ng-disabled="data.city"/>
 							<span class="input-group-btn">
 								<button class="btn btn-default"
                                         type="button"
-                                        ng-disabled="data.region"
+                                        ng-disabled="data.city"
                                         dropdown-toggle>
                                     <span class="caret"></span>
                                 </button>
