--- a/central-js/client/src/html/service/region/built-in/bankid.submitted.html
+++ b/central-js/client/src/html/service/region/built-in/bankid.submitted.html
@@ -37,9 +37,7 @@
     </div>
     <div class="list-group-item">
         <div class="row no-margin-bottom">
-            <h3 class="text-center">Шановний {{data.formData.params.bankIdfirstName.value}}
-                                    {{data.formData.params.bankIdmiddleName.value}}
-                                    {{data.formData.params.bankIdlastName.value}}!</h3>
+            <h3 class="text-center">Шановний {{data.formData.params.bankIdfirstName.value}} {{data.formData.params.bankIdmiddleName.value}}!</h3>
 
             <div class="text-center">Ваше звернення №{{state.data.id}} успішно зареєстровано</div>
             <div class="text-center"
