--- a/central-js2/client/app/service/index.html
+++ b/central-js2/client/app/service/index.html
@@ -31,7 +31,7 @@
             </ul>
         </div>
     </div>
-    <div ui-view="">
+    <div ui-view="content">
         <div class="text-center">
             <img class="text-center"
                  src="assets/images/loading.gif"
