--- a/central-js2/client/app/service/index/services.html
+++ b/central-js2/client/app/service/index/services.html
@@ -1,7 +1,6 @@
 <div class="container">
     <div class="row">
-        <div style="/*width: 600px;margin-left: 0;alignment-adjust: central;*/"
-             class="col-md-7 col-md-offset-3">
+        <div class="col-md-7 col-md-offset-3">
             <div class="big-inner-addon">
                 <span class="glyphicon glyphicon-search al-left"
                       aria-hidden="true"></span>
@@ -12,7 +11,7 @@
                        class="form-control input-lg"
                        placeholder="Пошук послуги">
                 <a href="#"
-                   ng-click="onExtSearchClick()"><span class="glyphicon glyphicon-triangle-bottom al-right"
+                   ng-click="onExtSearchClick()"><span class="glyphicon glyphicon-pencil al-right"
                                                        aria-hidden="true"></span></a>
 
                 <div class="panel panel-default"
