--- a/central-js2/client/app/service/region/built-in/index.html
+++ b/central-js2/client/app/service/region/built-in/index.html
@@ -25,6 +25,6 @@
     <service-auth-block
             ng-if="data.region"
             n-step="2"
-            redirect-uri="{{$state.href('service.general.region.built-in.bankid', {'id': service.nID, 'region': data.region.nID})}}"
+            redirect-uri="{{$state.href('index.service.general.region.built-in.bankid', {'id': service.nID, 'region': data.region.nID})}}"
             ></service-auth-block>
 </div>
