--- a/central-js2/client/index.html
+++ b/central-js2/client/index.html
@@ -110,9 +110,11 @@
 <script src="app/journal/controllers/journalbankid.controller.js"></script>
 <script src="app/journal/controllers/journalcontent.controller.js"></script>
 <script src="app/journal/journal.js"></script>
-<script src="app/service/built-in/controllers/built-in.js"></script>
+<script src="app/service/built-in/controllers/servicebuiltin.controller.js"></script>
+<script src="app/service/built-in/controllers/servicebuiltinbankid.controller.js"></script>
 <script src="app/service/catalog.js"></script>
 <script src="app/service/city/controllers/servicecity.controller.js"></script>
+<script src="app/service/city/controllers/servicecityabsent.controller.js"></script>
 <script src="app/service/city/link/script.js"></script>
 <script src="app/service/controllers/states.js"></script>
 <script src="app/service/country/built-in/script.js"></script>
