--- a/central-js/client/app/journal/bankid/index.html
+++ b/central-js/client/app/journal/bankid/index.html
@@ -1,24 +1,14 @@
 <div class="row">
     <div class="col-md-12">
         <form class="form-signin-bankid_">
-            <h4 class="form-signin-bankid-heading_">Щоб почати користуватись сервісом “Мій журнал”,
-                <a href="#"
-                   ng-click="loginWithBankId()">увійдіть через BankID</a>
-                                                    або через
-                <a href="#"
-                   onclick="alert('Працюватиме незабаром');">електронно-цифровий підпис</a>
+            <h4 class="form-signin-bankid-heading_">Щоб почати користуватись сервісом “Мій журнал”, 
+                <a href="#" ng-click="loginWithBankId()">увійдіть через BankID</a>
+                або через 
+                <a href="#" ng-click="loginWithEds()">електронно-цифровий підпис</a>
             </h4>
-
-            <div style="display: none;">
-                <button class="btn btn-lg btn-primary btn-block"
-                        type="submit"
-                        ng-click="loginWithBankId()">BankID
-                </button>
-            </div>
         </form>
     </div>
-    <div class="text-center"
-         ng-show="error">
+    <div class="text-center" ng-show="error">
         <p>{{error}}</p>
     </div>
 </div>
