--- a/central-js/client/app/service/country/built-in/bankid.submitted.html
+++ b/central-js/client/app/service/country/built-in/bankid.submitted.html
@@ -5,8 +5,7 @@
     <div class="list-group-item disabled">
         <div class="row no-margin-bottom">
             <div class="col-md-11">Крок 1. Ви увійшли як {{data.formData.params.bankIdfirstName.value}}
-                                   {{data.formData.params.bankIdmiddleName.value}}
-                                   {{data.formData.params.bankIdlastName.value}}
+                {{data.formData.params.bankIdmiddleName.value}} {{data.formData.params.bankIdlastName.value}}
             </div>
             <div class="col-md-1">
                 <div class="link-button">
@@ -17,18 +16,11 @@
     </div>
     <div class="list-group-item">
         <div class="row no-margin-bottom">
-            <h3 class="text-center">Шановний {{data.formData.params.bankIdfirstName.value}}
-                                    {{data.formData.params.bankIdmiddleName.value}}
-                                    {{data.formData.params.bankIdlastName.value}}!</h3>
+            <h3 class="text-center">Шановний {{data.formData.params.bankIdfirstName.value}} {{data.formData.params.bankIdmiddleName.value}}!</h3>
 
             <div class="text-center">Ваше звернення №{{state.data.id}} успішно зареєстровано</div>
-            <div class="text-center"
-                 ng-bind-html="getHtml(data.formData.params.response.value)"
-                 ng-if="data.formData.params.response.value"></div>
-            <div class="text-center"
-                 ng-if="!data.formData.params.response.value">Результати будуть спрямовані на Ваш
-                                                              {{data.formData.params.email.value}}
-            </div>
+            <div class="text-center" ng-bind-html="getHtml(data.formData.params.response.value)" ng-if="data.formData.params.response.value"></div>
+            <div class="text-center" ng-if="!data.formData.params.response.value">Результати будуть спрямовані на Ваш {{data.formData.params.email.value}}</div>
         </div>
     </div>
 </div>
