--- a/central-js/client/app/service/region/absent.html
+++ b/central-js/client/app/service/region/absent.html
@@ -11,7 +11,7 @@
                             name="region"
                             ng-model="data.region"
                             ng-options="region as region.sName for region in [data.region] | orderBy:'sName'"
-                            ng-disabled="data.region"></select>
+                            ng-disabled="data.city"></select>
                 </div>
             </div>
             <div class="col-md-1"
