--- a/central-js/client/app/404/404.html
+++ b/central-js/client/app/404/404.html
@@ -1,4 +1,4 @@
 <div class="container">
     <h1>Сторінку не знайдено</h1>
-    <a ui-sref="index.main">На головну</a>
+    <a ui-sref="index">На головну</a>
 </div>
