using glyphicon-download instead of missed one

--- a/central-js/client/app/documents/content.html
+++ b/central-js/client/app/documents/content.html
@@ -77,7 +77,7 @@
                 <td>
                     <a ng-href="{{getDocumentLink(doc.nID)}}"
                        target="_self">
-                        <span class="glyphicon glyphicon-duplicate"
+                        <span class="glyphicon glyphicon-download"
                               title="Завантажити копію"
                               aria-hidden="true"></span></a>
                     <a href="#accordion{{doc.nID}}"
