bootstrap extended search icon correction

--- a/central-js/client/app/service/index/services.html
+++ b/central-js/client/app/service/index/services.html
@@ -11,7 +11,7 @@
                        class="form-control input-lg"
                        placeholder="Пошук послуги">
                 <a href="#"
-                   ng-click="onExtSearchClick()"><span class="glyphicon glyphicon-pencil al-right"
+                   ng-click="onExtSearchClick()"><span class="glyphicon glyphicon-chevron-down al-right"
                                                        aria-hidden="true"></span></a>
 
                 <div class="panel panel-default"
